Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-25250

Cloning automatically detected CMake results in "CMake executable does not provide required IDE integration features" error message

XMLWordPrintable

    • 87197be604e3c5f8bf39e9aa11fdfea88b6eab75 (qt-creator/qt-creator/4.14)

      The error stays even after applying the changes in the dialog. It does go away when the dialog is reopened though.

      Qt Creator 4.14.0
      Based on Qt 5.15.2 (GCC 7.3.1 20180303 (Red Hat 7.3.1-5), 64 bit)
      Built on Dec 17 2020 07:57:09
      From revision 909f74dc56
      

        For Gerrit Dashboard: QTCREATORBUG-25250
        # Subject Branch Project Status CR V

            cadam Cristian Adam
            mitch_curtis Mitch Curtis
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes