CMakeProjectManager: Do not report CMake as invalid when adding/cloning

Fixes: QTCREATORBUG-25250
Change-Id: Ic78a5645540145977c7ff0b05d8d7a5c3fc15fda
Reviewed-by: Eike Ziller <eike.ziller@qt.io>