src/plugins/cmakeprojectmanager/cmakesettingspage.cpp
@@ -118,9 +118,6 @@ public:
         , m_changed(changed)
     {
         updateErrorFlags();
-        m_tooltip = tr("Version: %1<br>Supports fileApi: %2")
-                        .arg(QString::fromUtf8(item->version().fullVersion))
-                        .arg(item->hasFileApi() ? tr("yes") : tr("no"));
     }
 
     CMakeToolTreeItem(const QString &name,
@@ -146,6 +143,15 @@ public:
         m_pathExists = fi.exists();
         m_pathIsFile = fi.isFile();
         m_pathIsExecutable = fi.isExecutable();
+
+        auto cmake = std::make_unique<CMakeTool>(m_autodetected ? CMakeTool::AutoDetection
+                                                                : CMakeTool::ManualDetection, m_id);
+        cmake->setFilePath(m_executable);
+        m_isSupported = cmake->hasFileApi();
+
+        m_tooltip = tr("Version: %1<br>Supports fileApi: %2")
+                        .arg(QString::fromUtf8(cmake->version().fullVersion))
+                        .arg(cmake->hasFileApi() ? tr("yes") : tr("no"));
     }
 
     CMakeToolTreeItem() = default;
